解决同步失败无法恢复问题

--- a/config/m3s_user_config.ini
+++ b/config/m3s_user_config.ini
@@ -1,8 +1,8 @@
 start:
 ; 曝光功能
-auto_exposure_target_brightness = 50;
+auto_exposure_target_brightness = 90;
 analog_gain = 1.0;
-exposure_time = 5000;
+exposure_time = 500;
 exposure_roi_x = 0;
 exposure_roi_y = 0;
 exposure_roi_w = 1280;
@@ -48,9 +48,9 @@ rotate_opposite = 0;
 
 ; 图像尺寸
 roi_x = 0;
-roi_y = 152;
+roi_y = 256;
 roi_w = 1280;
-roi_h = 720;
+roi_h = 512;
 roi_state = 1;
 
 ; 图像格式
@@ -58,17 +58,19 @@ source_format = 0;
 target_format = 30;
 
 ; 触发功能
+; ext_trigger_input_type: 1 falling edge, 3 rising edge
+; FPGA -> 1; MCU ->3
 soft_trigger_loop_time = 10000000.0;
 soft_trigger_loop_state = 0;
 ext_trigger_jitter_filter = 1.0;
 ext_trigger_delay = 0.0;
 strobe_delay = 0.0;
-strobe_duration = 1000.0;
+strobe_duration = 10000.0;
 frames_per_trigger = 1;
 ext_trigger_source = 1;
 trigger_state = 1;
 strobe_driver = 0;
 strobe_output_type = 2;
-ext_trigger_input_type = 3;
-trigger_frame_rate = 30.0;
+ext_trigger_input_type = 1;
+trigger_frame_rate = 30;
 end;
